# singularity-eos

./: .gitignore  .gitlab-ci.yml  .gitmodules  CHANGELOG.md  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  README.build.md  README.env.md  README.md  README.spack.md  README.spack_devflow.md  index.html  spack.yaml
.github/: PULL_REQUEST_TEMPLATE.md
.gitlab/: build_and_test.cmake  build_and_test.sh  common.yml  download_prereq.sh  download_prereqs.sh  kessel.sh  mr.sh
HEAD/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
Yurlungur-patch-1/: .buildinfo  genindex.html  index.html  search.html
added_benchmark/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
aemattssing/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
bgclayton_carnahan_star_fix/: .buildinfo  genindex.html  index.html  search.html
bgclayton_simple_macaw/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
closure/: mixed_cell_models.hpp
cmake/: ExternalConfig.cmake  FindEOSPAC.cmake  FindEigen3.cmake  FindHDF5.cmake  FindHwloc.cmake  FindPortsofCall.cmake  Format.cmake  ProcessConfiguration.cmake  SetupCompilers.cmake  SetupCustomMessage.cmake  SetupFlags.cmake  SetupInstall.cmake  SetupOptions.cmake  SubmoduleConfig.cmake  compilers.cmake  content.cmake  cuda.cmake  dependency.cmake  eigen3.cmake  eospac.cmake  hdf5.cmake  install.cmake  kokkos.cmake  kokkoskernels.cmake  library.cmake  mathselect.cmake  messageplus.cmake  plugins.cmake  portsofcall.cmake  singularity-eosConfig.cmake.in  singularity_utils.cmake  subdirlist.cmake  (+2 more)
eospac-wrapper/: CMakeLists.txt  eospac_wrapper.cpp  eospac_wrapper.hpp
example/: Benchmark.cpp  Benchmark_kokkos.cpp  Benchmark_spiner.cpp  CMakeCache.txt  CMakeLists.txt  Performance_Plotter.ipynb  benchmark_spiner_cpu.cpp  benchmark_spiner_kokkos.cpp  custom_eos_to_spiner.cpp  eos_grid.cpp  get_sesame_state.cpp  get_sound_speed_press.cpp  get_sound_speed_press.py  get_spiner_bounds.cpp  map_pt_space.cpp  pte_2mat.cpp  test_root_thresh.cpp
example/plugin/: CMakeLists.txt  Makefile  cmake_install.cmake  dust.hpp  test_dust.cpp
example/plugin/dust/: dust.hpp  dust_variant.hpp
example/plugin/tst/: test_dust.cpp
python/: CMakeLists.txt  modifier_bilinear_ramp.cpp  modifier_relativistic.cpp  modifier_scaled.cpp  modifier_shifted.cpp  modifier_unit_system.cpp  module.cpp  module.hpp
sesame2spiner/: .gitignore  CMakeLists.txt  Makefile  README.md  generate_files.cpp  generate_files.hpp  io_eospac.cpp  io_eospac.hpp  main.cpp  parse_cli.cpp  parse_cli.hpp  parser.cpp  parser.hpp  test.cpp
sesame2spiner/examples/: air_and_steel_128.json  air_and_steel_256.json  air_and_steel_64.json  air_and_steel_compare.json  air_and_titanium.json  airtest.json  materials.json  materials_unit_tests.json
singularity-eos/: CMakeLists.txt
singularity-eos/base/: CMakeLists.txt  constants.hpp  eos_error.hpp  error_utils.hpp  generic_indexer.hpp  hermite.hpp  indexable_types.hpp  math_utils.hpp  robust_utils.hpp  serialization_utils.hpp  singularity_error.hpp  spiner_table_utils.hpp  table_bounds.hpp  tuple_utils.hpp  variadic_utils.hpp
singularity-eos/base/fast-math/: logs.hpp
singularity-eos/base/integration/: numerical_integration.hpp
singularity-eos/base/root-finding-1d/: root_finding.hpp
singularity-eos/base/sp5/: singularity_eos_sp5.hpp
singularity-eos/closure/: CMakeLists.txt  kinetic_phasetransition_methods.hpp  kinetic_phasetransition_models.hpp  kinetic_phasetransition_utils.hpp  mixed_cell_models.hpp  multiphase_material.hpp
singularity-eos/eos/: CMakeLists.txt  default_variant.hpp  eos.cpp  eos.hpp  eos.hpp.in  eos_SpinerEOSDependsRhoSie.hpp  eos_SpinerEOSDependsRhoT.hpp  eos_base.hpp  eos_builder.cpp  eos_builder.hpp  eos_carnahan_starling.cpp  eos_carnahan_starling.hpp  eos_crest.hpp  eos_davis.cpp  eos_davis.hpp  eos_electrons.cpp  eos_electrons.hpp  eos_eospac.cpp  eos_eospac.hpp  eos_gruneisen.cpp  eos_gruneisen.hpp  eos_helmholtz.cpp  eos_helmholtz.hpp  eos_ideal.cpp  eos_ideal.hpp  eos_isothermal.hpp  eos_jwl.cpp  eos_jwl.hpp  eos_mgusup.cpp  eos_mgusup.hpp  eos_models.hpp  eos_multi_eos.hpp  eos_noble_abel.cpp  eos_noble_abel.hpp  eos_polynomial.hpp  eos_powermg.cpp  eos_powermg.hpp  eos_sap_polynomial.cpp  eos_sap_polynomial.hpp  eos_simple_macaw.hpp  (+46 more)
singularity-eos/eos/base/: constants.hpp  eos_error.hpp
singularity-eos/eos/modifiers/: eos_unitsystem.hpp  floored_energy.hpp  minimum_energy.hpp  modifier_vector_macros.hpp  multi_eos.hpp  ramps_eos.hpp  relativistic_eos.hpp  scaled_eos.cpp  scaled_eos.hpp  shifted_eos.cpp  shifted_eos.hpp  tilted_maxwell_eos.hpp  zsplit_eos.hpp
singularity-eos/include/eos/: eos.hpp  eos_builder.hpp  singularity_eos.hpp
singularity-eos/include/eos/base/: eos_error.hpp
singularity-eos/include/eos/closure/: mixed_cell_models.hpp
singularity-eos/src/: eos_builder.cpp  eos_davis.cpp  eos_eospac.cpp  eos_gruneisen.cpp
singularity-eos/src/eos/: eos_ideal.cpp  eos_jwl.cpp  eos_spiner.cpp  eos_stellar_collapse.cpp  singularity_eos.cpp
test/: CMakeLists.txt  Makefile  accumulate_timings.py  catch2_define.cpp  compare_on_data.cpp  compare_on_dataset.cpp  compare_to_eospac.cpp  eos_unit_test_helpers.hpp  eos_unit_tests.cpp  kpt_full_circle_test.hpp  longtest_pte_2phase.hpp  material_2phaseVinetSn.hpp  material_5phaseSesameSn.hpp  plot_timings.py  profile_eos.cpp  profile_eospac.cpp  profile_root_find.cpp  profile_stellar_collapse.cpp  pte_longtest_2phaseVinetSn.hpp  pte_test_2phaseVinetSn.hpp  pte_test_3mat_analytic.hpp  pte_test_3phaseSesameSn.hpp  pte_test_5phaseSesameSn.hpp  pte_test_first.hpp  pte_test_utils.hpp  python_bindings.py  test_bounds.cpp  test_closure_pte.cpp  test_eos_carnahan_starling.cpp  test_eos_crest.cpp  test_eos_davis.cpp  test_eos_gruneisen.cpp  test_eos_helmholtz.cpp  test_eos_ideal.cpp  test_eos_mgusup.cpp  test_eos_modifier_floored_energy.cpp  test_eos_modifier_multi_eos.cpp  test_eos_modifiers.cpp  test_eos_modifiers_minimal.cpp  test_eos_multi_eos.cpp  (+43 more)
(+4166 files in other folders)
